[Java] Add exports for modules enabled JVMs.