@@ -161,6 +161,11 @@ subprojects {
     }
 
     test {
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+            jvmArgs('--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED')
+        }
+
         testLogging {
             showStandardStreams = true
             exceptionFormat = 'full'
